# PolymorphicBlocks

./: .gitignore  .scalafmt.conf  BOM.csv  BomBackend_bom.csv  CONTRIBUTING.md  HdlInterfaceServer.py  HdlInterfaceService.py  LICENSE  Lf21215tmr_Device.py  LibraryDump.py  MANIFEST.in  Pipfile  README.md  blinky_skeleton.py  compiler_gui.py  developing.md  digikey-parts.md  elk_visualizer2.py  examples.md  getting-started.md  getting_started_advanced.md  getting_started_hierarchy_layout.md  getting_started_library.md  getting_started_optimization.md  getting_started_optmization.md  getting_started_schimport.md  library_to_json.py  mypy.ini  mypy_edg_plugin.py  perf.py  proto_reader_example.py  pyproject.toml  reference.md  reference_library.md  rename_parts.py  requirements.txt  setup.md  test_kicad_basic.csv  test_kicad_multinet.csv  test_kicad_multisink.csv  (+1 more)
.github/: pull_request_template.md
compiler/: .gitignore  .scalafmt.conf  build.sbt
compiler_gui/: BlockDetailPanel.py  BlockDiagramModel.py  BlockDiagramPanel.py  Common.py  DesignTree.py  ElkGraph.py  ExprDetailPanel.py  LibraryTreePanel.py  RefinementPanel.py  Utils.py  __init__.py
edg/: BoardCompiler.py  BoardTop.py  ElectronicsDriver.py  SchematicStubGenerator.py  __init__.py
edg_core/: Array.py  ArrayExpr.py  BaseBackend.py  BaseRefinementPass.py  Binding.py  BlockInterfaceMixin.py  Blocks.py  BufferDeserializer.py  BufferSerializer.py  Builder.py  Categories.py  CompilerUtils.py  ConstraintExpr.py  Core.py  DesignTop.py  Driver.py  EdslUserExceptions.py  Generator.py  HdlInterfaceServer.py  HdlInterfaceService.py  HdlUserExceptions.py  HierarchyBlock.py  IdentityDict.py  Link.py  MultiBiDict.py  MultipackBlock.py  NotConnectablePort.py  PortBlocks.py  Ports.py  Range.py  Refinements.py  ScalaCompilerInterface.py  SimpleConstProp.py  StructuredMetadata.py  TransformUtil.py  Util.py  __init__.py  test_assertion.py  test_block.py  test_block_description.py  (+35 more)
edg_hdl_server/: Server.py  __init__.py  __main__.py
edgir/: README.md  __init__.py  common.proto  common_pb2.py  common_pb2.pyi  elem.proto  elem_pb2.py  elem_pb2.pyi  expr.proto  expr_pb2.py  expr_pb2.pyi  impl.proto  impl_pb2.py  impl_pb2.pyi  init.proto  init_pb2.py  init_pb2.pyi  lit.proto  lit_pb2.py  lit_pb2.pyi  name.proto  name_pb2.py  name_pb2.pyi  ref.proto  ref_pb2.py  ref_pb2.pyi  schema.proto  schema_pb2.py  schema_pb2.pyi  type.proto
edgrpc/: __init__.py  compiler_pb2.py  compiler_pb2.pyi  hdl_pb2.py  hdl_pb2.pyi
electronics_abstract_parts/: AbstractAnalogSwitch.py  AbstractAntenna.py  AbstractBjt.py  AbstractCapacitor.py  AbstractConnector.py  AbstractCrystal.py  AbstractDebugHeaders.py  AbstractDevices.py  AbstractDiodes.py  AbstractFerriteBead.py  AbstractFets.py  AbstractFuse.py  AbstractInductor.py  AbstractJlcDiodes.py  AbstractJumper.py  AbstractLed.py  AbstractLedDriver.py  AbstractOpamp.py  AbstractOscillator.py  AbstractPassives.py  AbstractPowerConverters.py  AbstractResistor.py  AbstractResistorArray.py  AbstractSolidStateRelay.py  AbstractSpiMemory.py  AbstractSwitch.py  AbstractTestPoint.py  AssignablePin.py  CanTransceiver.py  Categories.py  DigitalAmplifiers.py  DigitalIsolator.py  DummyDevices.py  ESeriesUtil.py  GateDrivers.py  I2cPullup.py  IdealIoController.py  IdealModel.py  IoController.py  IoControllerExportable.py  (+35 more)
electronics_lib/: AdcSpi_Mcp3201.py  AdcSpi_Mcp3561.py  AnalogSwitch_Dg468.py  AnalogSwitch_Nlas4157.py  Ap3418.py  Batteries.py  BatteryCharger_Mcp73831.py  BatteryProtector_S8200A.py  BatteryProtector_S8261A.py  Bldc_Drv8313.py  Bldc_Tmc6300.py  BoostConverter_AnalogDevices.py  BoostConverter_DiodesInc.py  BoostConverter_TexasInstruments.py  BoostConverter_Torex.py  BoostConverters_AnalogDevices.py  BoostConverters_DiodesInc.py  BoostConverters_Torex.py  BootstrapVoltageAdder.py  BuckBoostConverter_Custom.py  BuckConverter_Ap3418.py  BuckConverter_Custom.py  BuckConverter_TexasInstruments.py  CalSolBlocks.py  Camera_Ov2640_Fpc24.py  CanBlocks.py  CanTransceiver_Iso1050.py  CanTransceiver_Sn65hvd230.py  CeramicResonator_Cstne.py  ChargeTracker_LT3652.py  Comparator_Lmv331.py  Connector.py  Connector_Banana.py  Connector_Rf.py  Connectors.py  Crystals.py  CurrentSense_Ad8418.py  CustomDiode.py  CustomFet.py  (+177 more)
(+2086 files in other folders)
