[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edg"
version = "0.2.0"
description = "Hardware description language for circuit boards"
readme = "README.md"
authors = [{ name = "Ducky", email = "richard.lin@berkeley.edu" }]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: BSD License",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
    "Typing :: Typed",
]
keywords = ["PCB", "hardware description language"]
dependencies = [
    "protobuf >= 3.20.0",
    "sexpdata==0.0.3",
    "Deprecated",
    "typing_extensions >= 4.4.0",
    "pydantic == 2.8.2",
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "black",
    "typing_extensions",
    "types-Deprecated==1.2.9.20240311",
    "types-protobuf"
]

[tool.setuptools]
packages = ["edg.edgir", "edg.edgrpc", "edg.core", "edg.hdl_server", "edg.electronics_model", "edg.abstract_parts", "edg.parts", "edg.jlcparts", "edg"]

[tool.setuptools.package-data]
edg = ["core/resources/edg-compiler-precompiled.jar", "electronics_model/resources/kicad_footprints.json", "abstract_parts/resources/*.kicad_sch", "parts/resources/Pruned_JLCPCB SMT Parts Library(20220419).csv", "parts/resources/*.kicad_sch"]

[tool.mypy]
enable_error_code = ["explicit-override"]
strict = true

implicit_reexport = true

[[tool.mypy.overrides]]
module = ["edg.edgir.*", "edg.edgrpc.*"]  # generated code
ignore_errors = true

[tool.black]
line-length = 120

[project.urls]
Homepage = "https://github.com/BerkeleyHCI/PolymorphicBlocks"
